# adaptive-monorepo

./: .gitignore  README.md  package.json  pnpm-lock.yaml  test_tool_call.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: provision_backend.yml
apps/adaptive-brain/: README.md  package-lock.json  package.json
apps/adaptive-startup/: App.tsx  Dockerfile  deploy.sh  index.css  index.tsx  market_test_result.json  package.json  pnpm-lock.yaml  setupStripe.js  types.ts  vite.config.ts
apps/adaptive-startup-tauri/: .gitignore  App.tsx  Dockerfile  index.css  package.json  pnpm-lock.yaml  tailwind.config.js  types.ts
apps/low-cve-api-rust/: ARCHITECTURE.md  Cargo.toml  (+20 more)
apps/tekimax/api_server/: Cargo.toml  Dockerfile  openapi.yaml  quantum_optimizer.py  router_res.txt
apps/tekimax/api_server/docs/whitepapers/: nist_sp_800_38d_implementation.md  pitch_deck.md  sovereign_api_design.md  vertical_ai_sdk.md  whitepaper.md
apps/tekimax/api_server/src/: audit.rs  c2pa_signer.rs  config.rs  inference_router.rs  main.rs  pii_scrubber.rs  probe_workos.rs  storage.rs  utils.rs  version.rs
apps/tekimax/api_server/src/handlers/: adaptive.rs  auth.rs  crypto.rs  docs.rs  library.rs  llm.rs  mod.rs  orchestrator.rs  policy.rs  quantum.rs  research.rs  router.rs  sovereign.rs  stream.rs  system.rs
apps/tekimax/infrastructure/sovereign-ca/: Cargo.toml  Dockerfile  ca-config.json  ca-csr.json  docker-compose.yml  signer-csr.json
apps/tekimax/infrastructure/sovereign-ca/pki/: ca.csr  signer.csr
apps/tekimax/infrastructure/sovereign-ca/src/: main.rs
(+362 files in other folders)
