[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api_server"
path = "src/main.rs"

[dependencies]
ollama_proxy = { path = "../ollama_proxy" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"
serde_json = "1.0.148"
bytes = "1.6"
tower-http = { version = "0.5", features = ["cors", "set-header"] }
c2pa = { version = "0.33.2", features = ["file_io", "add_thumbnails", "unstable_api"] }
base64 = "0.22"
chrono = { version = "0.4.42", features = ["serde"] }
md5 = "0.8.0"
rand = "0.9.2"
sha2 = "0.10.9"
hex = "0.4.3"
lazy_static = "1.5.0"
regex = "1.12.2"
aes-gcm = "0.10.3"
zeroize = { version = "1.8.2", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
futures = "0.3"
tower = "0.5.2"
