[package]
name = "sovereign-ca"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
c2pa = { version = "0.33.2", features = ["file_io", "add_thumbnails", "unstable_api"] }
anyhow = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3.8"
base64 = "0.21"
